# check-out-ai

./: .gitignore  Dockerfile  README.md  areaNo.py  get_image.py  lookbook.py  pyproject.toml
.github/workflows/: staging.yaml
src/: areaNo.py  image.py  lookbook.py  main.py
